[gd_scene load_steps=18 format=2]

[ext_resource path="res://ui/views/editor/components/viewport/default_env.tres" type="Environment" id=1]
[ext_resource path="res://ui/icons/icon_question_mark.svg" type="Texture" id=2]
[ext_resource path="res://ui/views/editor/components/icon_button/icon_button.tscn" type="PackedScene" id=3]
[ext_resource path="res://ui/icons/icon_material_preview_light_2.svg" type="Texture" id=4]
[ext_resource path="res://ui/views/editor/components/viewport/camera.gd" type="Script" id=5]
[ext_resource path="res://ui/views/editor/components/viewport/runtime_tree.gd" type="Script" id=6]
[ext_resource path="res://ui/common/auto_scale.gd" type="Script" id=7]
[ext_resource path="res://ui/icons/icon_material_preview_light_1.svg" type="Texture" id=8]
[ext_resource path="res://ui/views/editor/components/viewport/draw_axis.gd" type="Script" id=9]
[ext_resource path="res://ui/icons/icon_camera.svg" type="Texture" id=10]
[ext_resource path="res://ui/views/editor/components/viewport/viewport.gd" type="Script" id=11]
[ext_resource path="res://ui/views/editor/components/viewport/gizmos/move_gizmo.tscn" type="PackedScene" id=12]
[ext_resource path="res://ui/views/editor/components/viewport/gizmos_manager.gd" type="Script" id=13]
[ext_resource path="res://ui/views/editor/components/viewport/monitor_local_tree_changes.gd" type="Script" id=14]
[ext_resource path="res://ui/views/editor/components/viewport/viewport_input.gd" type="Script" id=15]

[sub_resource type="World" id=1]
environment = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=2]
content_margin_left = 6.0
content_margin_right = 6.0
content_margin_top = 6.0
content_margin_bottom = 6.0
bg_color = Color( 0.117647, 0.117647, 0.117647, 0.784314 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[node name="EditorViewport" type="HSplitContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/autohide = 0
script = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tree" type="Tree" parent="."]
margin_right = 378.0
margin_bottom = 768.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 6 )
input = NodePath("../MarginContainer/ViewportContainer/Viewport/Input")
output = NodePath("../MarginContainer/ViewportContainer/Viewport/Output")

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_left = 402.0
margin_right = 1366.0
margin_bottom = 768.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.5

[node name="ViewportContainer" type="ViewportContainer" parent="MarginContainer"]
margin_right = 964.0
margin_bottom = 768.0
size_flags_horizontal = 3
size_flags_vertical = 3
stretch = true
script = ExtResource( 15 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Viewport" type="Viewport" parent="MarginContainer/ViewportContainer"]
size = Vector2( 964, 768 )
size_override_stretch = true
own_world = true
world = SubResource( 1 )
handle_input_locally = false
msaa = 2
usage = 3
render_target_update_mode = 3
physics_object_picking = true

[node name="DrawAxis" type="Spatial" parent="MarginContainer/ViewportContainer/Viewport"]
script = ExtResource( 9 )

[node name="Pivot" type="Spatial" parent="MarginContainer/ViewportContainer/Viewport"]
transform = Transform( 0.707107, -0.45452, 0.541675, 0, 0.766044, 0.642788, -0.707107, -0.454519, 0.541675, 0, 0, 0 )
script = ExtResource( 5 )

[node name="Camera" type="Camera" parent="MarginContainer/ViewportContainer/Viewport/Pivot"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 3 )
far = 1500.0

[node name="DirectionalLight" type="DirectionalLight" parent="MarginContainer/ViewportContainer/Viewport/Pivot/Camera"]
transform = Transform( 1, 0, 0, 0, 0.939693, 0.34202, 0, -0.34202, 0.939693, 0, 0, 0 )
light_energy = 0.7
light_specular = 0.0

[node name="Lighting" type="Spatial" parent="MarginContainer/ViewportContainer/Viewport"]

[node name="DirectionalLight" type="DirectionalLight" parent="MarginContainer/ViewportContainer/Viewport/Lighting"]
transform = Transform( 0.446463, -0.751037, 0.48643, 0.446463, 0.658088, 0.606293, -0.775463, -0.0535144, 0.629122, 2.00127, 0, -1.33922 )
visible = false
light_energy = 0.7
light_specular = 0.0
directional_shadow_mode = 1

[node name="WorldEnvironment" type="WorldEnvironment" parent="MarginContainer/ViewportContainer/Viewport/Lighting"]
environment = ExtResource( 1 )

[node name="Input" type="Spatial" parent="MarginContainer/ViewportContainer/Viewport"]
script = ExtResource( 14 )

[node name="Output" type="Spatial" parent="MarginContainer/ViewportContainer/Viewport"]
script = ExtResource( 14 )

[node name="GizmosManager" type="Spatial" parent="MarginContainer/ViewportContainer/Viewport"]
script = ExtResource( 13 )
camera_node = NodePath("../../../MarginContainer/ViewportContainer/Viewport/Pivot/Camera")
viewport_node = NodePath("../../../MarginContainer/ViewportContainer/Viewport")
input_root = NodePath("../../../MarginContainer/ViewportContainer/Viewport/Input")
output_root = NodePath("../../../MarginContainer/ViewportContainer/Viewport/Output")

[node name="MoveGizmo" parent="MarginContainer/ViewportContainer/Viewport/GizmosManager" instance=ExtResource( 12 )]
visible = false
arrow_x = NodePath("../../../../MarginContainer/ViewportContainer/Viewport/GizmosManager/MoveGizmo/Arrows/ArrowX")
arrow_y = NodePath("../../../../MarginContainer/ViewportContainer/Viewport/GizmosManager/MoveGizmo/Arrows/ArrowY")
arrow_z = NodePath("../../../../MarginContainer/ViewportContainer/Viewport/GizmosManager/MoveGizmo/Arrows/ArrowZ")
quad_x = NodePath("../../../../MarginContainer/ViewportContainer/Viewport/GizmosManager/MoveGizmo/Quads/X")
quad_y = NodePath("../../../../MarginContainer/ViewportContainer/Viewport/GizmosManager/MoveGizmo/Quads/Y")
quad_z = NodePath("../../../../MarginContainer/ViewportContainer/Viewport/GizmosManager/MoveGizmo/Quads/Z")

[node name="ViewportUI" type="MarginContainer" parent="MarginContainer"]
margin_right = 964.0
margin_bottom = 768.0
mouse_filter = 2
size_flags_horizontal = 3
custom_constants/margin_right = 4
custom_constants/margin_top = 4
custom_constants/margin_left = 4
custom_constants/margin_bottom = 4

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/ViewportUI"]
margin_left = 4.0
margin_top = 4.0
margin_right = 960.0
margin_bottom = 764.0
mouse_filter = 2

[node name="LeftColumn" type="VBoxContainer" parent="MarginContainer/ViewportUI/HBoxContainer"]
margin_right = 948.0
margin_bottom = 760.0
mouse_filter = 2
size_flags_horizontal = 3
custom_constants/separation = 6

[node name="DisplayOptions" type="HBoxContainer" parent="MarginContainer/ViewportUI/HBoxContainer/LeftColumn"]
margin_right = 143.0
margin_bottom = 29.0
rect_min_size = Vector2( 0, 28 )
size_flags_horizontal = 0
size_flags_vertical = 0
script = ExtResource( 7 )
min_size_y = true

[node name="Legend" parent="MarginContainer/ViewportUI/HBoxContainer/LeftColumn/DisplayOptions" instance=ExtResource( 3 )]
margin_right = 24.0
margin_bottom = 29.0
toggle_mode = true
icon = ExtResource( 2 )

[node name="ResetCamera" parent="MarginContainer/ViewportUI/HBoxContainer/LeftColumn/DisplayOptions" instance=ExtResource( 3 )]
margin_left = 32.0
margin_right = 56.0
margin_bottom = 29.0
icon = ExtResource( 10 )

[node name="VSeparator2" type="VSeparator" parent="MarginContainer/ViewportUI/HBoxContainer/LeftColumn/DisplayOptions"]
margin_left = 64.0
margin_right = 79.0
margin_bottom = 29.0
custom_constants/separation = 15

[node name="LightSetup1" parent="MarginContainer/ViewportUI/HBoxContainer/LeftColumn/DisplayOptions" instance=ExtResource( 3 )]
margin_left = 87.0
margin_right = 111.0
margin_bottom = 29.0
icon = ExtResource( 8 )

[node name="LightSetup2" parent="MarginContainer/ViewportUI/HBoxContainer/LeftColumn/DisplayOptions" instance=ExtResource( 3 )]
margin_left = 119.0
margin_right = 143.0
margin_bottom = 29.0
icon = ExtResource( 4 )

[node name="Legend" type="PanelContainer" parent="MarginContainer/ViewportUI/HBoxContainer/LeftColumn"]
visible = false
margin_top = 35.0
margin_right = 268.0
margin_bottom = 134.0
size_flags_horizontal = 0
custom_styles/panel = SubResource( 2 )

[node name="Label" type="Label" parent="MarginContainer/ViewportUI/HBoxContainer/LeftColumn/Legend"]
margin_left = 6.0
margin_top = 6.0
margin_right = 262.0
margin_bottom = 93.0
custom_constants/line_spacing = 6
text = "Middle Click: Orbit
Shift + Middle Click: Pan
Scroll Up / Down: Zoom"

[node name="RightColumn" type="VBoxContainer" parent="MarginContainer/ViewportUI/HBoxContainer"]
margin_left = 956.0
margin_right = 956.0
margin_bottom = 760.0
alignment = 2
[connection signal="node_selected" from="Tree" to="MarginContainer/ViewportContainer/Viewport/GizmosManager" method="_on_node_selected"]
[connection signal="node_added" from="MarginContainer/ViewportContainer/Viewport/Input" to="MarginContainer/ViewportContainer/Viewport/GizmosManager" method="_on_node_added"]
[connection signal="node_removed" from="MarginContainer/ViewportContainer/Viewport/Input" to="MarginContainer/ViewportContainer/Viewport/GizmosManager" method="_on_node_removed"]
[connection signal="node_added" from="MarginContainer/ViewportContainer/Viewport/Output" to="MarginContainer/ViewportContainer/Viewport/GizmosManager" method="_on_node_added"]
[connection signal="node_removed" from="MarginContainer/ViewportContainer/Viewport/Output" to="MarginContainer/ViewportContainer/Viewport/GizmosManager" method="_on_node_removed"]
[connection signal="toggled" from="MarginContainer/ViewportUI/HBoxContainer/LeftColumn/DisplayOptions/Legend" to="MarginContainer/ViewportContainer" method="display_legend"]
[connection signal="pressed" from="MarginContainer/ViewportUI/HBoxContainer/LeftColumn/DisplayOptions/ResetCamera" to="MarginContainer/ViewportContainer/Viewport/Pivot" method="reset_camera"]
[connection signal="pressed" from="MarginContainer/ViewportUI/HBoxContainer/LeftColumn/DisplayOptions/LightSetup1" to="MarginContainer/ViewportContainer" method="enable_camera_light"]
[connection signal="pressed" from="MarginContainer/ViewportUI/HBoxContainer/LeftColumn/DisplayOptions/LightSetup2" to="MarginContainer/ViewportContainer" method="enable_static_light"]
